[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/delegates/Interactable.gd" type="Script" id=1]

[sub_resource type="CircleShape2D" id=1]
radius = 50.0

[node name="Interactable" type="Area2D"]
collision_layer = 256
collision_mask = 0
script = ExtResource( 1 )

[node name="PlayerDetector" type="Area2D" parent="."]
collision_layer = 0

[node name="PlayerdDetectorShape" type="CollisionShape2D" parent="PlayerDetector"]
shape = SubResource( 1 )

[connection signal="input_event" from="." to="." method="_on_Selectable_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_Selectable_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Selectable_mouse_exited"]
[connection signal="body_entered" from="PlayerDetector" to="." method="_on_PlayerDetector_body_entered"]
[connection signal="body_exited" from="PlayerDetector" to="." method="_on_PlayerDetector_body_exited"]
